# Paicord

./: .editorconfig  .gitignore  Bundler.toml  Cargo.toml  Feature Checklist.md  Package.swift  README.md  flake.nix  justfile  settings.gradle.kts  swift-android.gradle.kts
.cargo/: config.toml
.github/workflows/: build.yml  build_pr.yml  pr_comment.yml  release_pr.yml
DiscordClientLib/: Package.swift  Package@swift-6.0.swift
DiscordClientLib/Sources/DiscordGateway/: BotGatewayManager.swift  DiscordCache.swift  ShardingGatewayManager.swift  UserGatewayManager.swift
DiscordMarkdownParser/: LICENSE  Package.swift  README.md
PaiCord/: PaiCordApp.swift
PaiCord.xcodeproj/: project.pbxproj
PaiCord.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
PaiCord/Baseplates/: LargeBaseplate.swift  SlideoverDoubleView.swift  SmallBaseplate.swift
PaiCord/Chat/: ChatView.swift
PaiCord/Common/Chat/: ChatView.swift
Paicord/: Info.plist  PaiCordApp.swift
Paicord.xcodeproj/: project.pbxproj
Paicord.xcworkspace/: contents.xcworkspacedata
Paicord/App/: AccountCommands.swift  Challenges.swift  Commands.swift  PaicordApp.swift  PaicordAppState.swift  PaicordSheetsAlerts.swift  RootView.swift
Paicord/Baseplates/: LargeBaseplate.swift  SlideoverDoubleView.swift  SmallBaseplate.swift
Paicord/Resources/: DiscordEmojiNames.json  Localizable.xcstrings
Paicord/Stores/: ChannelStore.swift  CurrentUserStore.swift  DiscordDataStoreProtocol.swift  ExternalBadgeStore.swift  GatewayStore.swift  GuildStore.swift  MessageDrainStore.swift  PresenceStore.swift  QuickSwitcherProviderStore.swift  ReadStateStore.swift  SettingsStore.swift  TokenStore.swift  UserGuildSettingsStore.swift  VoiceChannelsStore.swift  VoiceConnectionStore.swift
Paicord/Utilities/: ObservableBox.swift  PermsHelper.swift  Storage.swift  Test.swift  Thumbhash.swift
PaicordKt/: build.gradle.kts  settings.gradle.kts
PaicordKt/app/: build.gradle.kts
PaicordLib/: LICENSE  Package.swift  Package@swift-6.0.swift  build.gradle
PaicordQt/: CMakeLists.txt
PaicordQt/cpp/: main.cpp
PaicordQt/qml/: Main.qml
PaicordQt/rust/: Cargo.toml  build.rs
PaicordQt/rust/src/: lib.rs
Textual/: .gitignore  CONTRIBUTING.md  Makefile  Package.swift  README.md
Textual/Contributor Documentation/: Adding Syntax Highlighting Languages.md  README.md  System Overview.md
Textual/Scripts/: bundle-prism.sh
Textual/Textual.xcworkspace/: contents.xcworkspacedata
feeds/: appcast.xml  latest.json
gradle/: libs.versions.toml
paicord-rs/: Cargo.toml  build.rs
paicord-rs/PaicordLibBridge/: Package.swift
paicord-rs/PaicordLibBridge/Sources/: bridging-header.h  exports.swift
paicord-rs/PaicordLibBridge/Sources/DiscordGateway/: RemoteAuthGatewayManager.swift  UserGatewayManager.swift
paicord-rs/PaicordLibBridge/Sources/DiscordHTTP/: DefaultDiscordClient.swift
paicord-rs/PaicordLibBridge/Sources/DiscordHTTP/Endpoints/: CDNEndpoint.swift
paicord-rs/PaicordLibBridge/Sources/DiscordHTTP/Types/: Channel.swift  Gateway.swift  Guild.swift  Permission.swift  Shared.swift  User.swift
paicord-rs/PaicordLibBridge/Sources/DiscordModels/Protobuf/: PreloadedUserSettings.swift
paicord-rs/PaicordLibBridge/Sources/Markdown/: MarkdownParser.swift
paicord-rs/PaicordLibBridge/Sources/Utils/: Merging.swift
paicord-rs/src/: lib.rs  markdown.rs  user_gateway_manager.rs
paicord-rs/src/discord_gateway/: mod.rs  remote_auth_gateway_manager.rs  user_gateway_manager.rs
paicord-rs/src/discord_http/: default_discord_client.rs  mod.rs
paicord-rs/src/discord_http/endpoints/: cdn_endpoints.rs  mod.rs
paicord-rs/src/discord_models/: mod.rs
paicord-rs/src/discord_models/protobuf/: mod.rs  preloaded_user_settings.rs
paicord-rs/src/discord_models/types/: channel.rs  gateway.rs  guild.rs  mod.rs  permission.rs  shared.rs  snowflake.rs  user.rs
paicord-slint/: Cargo.toml  build.rs
paicord-slint/src/: app.rs  images.rs  lib.rs  main.rs  utils.rs
paicord-slint/src/models/: channel_list_model.rs  discord_channel.rs  discord_message.rs  guild_folder.rs  guild_list_model.rs  lazy_image.rs  message_list_model.rs  mod.rs  slint_tree.rs  user.rs
paicord-slint/src/state/: channel_manager.rs  current_user_manager.rs  gateway_manager.rs  guild_manager.rs  login_manager.rs  mod.rs
paicord-slint/ui/: main.slint
paicord-slint/ui/Baseplates/: LargeBaseplate.slint
paicord-slint/ui/Common/: RoundedImage.slint
paicord-slint/ui/Common/Chat/: ChatScroller.slint  ChatView.slint
paicord-slint/ui/Common/Chat/Messages/: MessageView.slint
paicord-slint/ui/Common/Chat/Messages/Attachments/: ImageAttachment.slint
paicord-slint/ui/Common/Chat/Messages/Kind/: DefaultMessage.slint  GuildMemberJoin.slint
paicord-slint/ui/Common/Guilds/: ChannelScrollBar.slint  GuildScrollBar.slint
paicord-slint/ui/Common/Login/: LoginView.slint
paicord-slint/ui/Globals/: ChannelStore.slint  CurrentUserStore.slint  GuildStore.slint
paicord-slint/ui/Libraries/: lucide.slint
paicord-slint/ui/Models/: DiscordChannel.slint  DiscordMessage.slint  DiscordUser.slint  GuildFolder.slint  LazyImage.slint
paicord-slint/ui/Sidebar/: ProfileBar.slint
paicord-slint/ui/State/: AppState.slint  LoginManager.slint
paicord-slint/ui/images/: Gallery.slint
(+447 files in other folders)
