[package]
name = "paicord-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
#swift-bridge = { path = "/home/sarah/Documents/github/swift-bridge/", features = ["async"]}
#swift-bridge = { version = "*", features = ["async"] }
swift-bridge = { git = "https://github.com/chinedufn/swift-bridge.git", features = ["async"] }

[build-dependencies]
#swift-bridge-build = { path = "/home/sarah/Documents/github/swift-bridge/crates/swift-bridge-build" }
#swift-bridge-build = { version = "*" }
swift-bridge-build = { git = "https://github.com/chinedufn/swift-bridge.git" }
pkg-config = "*"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }