[package]
name = "paicord"
version = "0.1.0"
edition = "2024"
links = "paicord"

[lib]
crate-type = ["staticlib"]


[dependencies]
cxx = "1.0.95"
cxx-qt = { git = "https://github.com/KDAB/cxx-qt" }
cxx-qt-lib = { git = "https://github.com/KDAB/cxx-qt", features = ["qt_full"] }
paicord-rs = { path = "../../paicord-rs" }
rust-i18n = "3.1.5"

[build-dependencies]
# The link_qt_object_files feature is required for statically linking Qt 6.
#cxx-qt-build = { git = "https://github.com/KDAB/cxx-qt", features = [ "link_qt_object_files" ] }
cxx-qt-build = { path = "/home/sarah/Documents/github/cxx-qt/crates/cxx-qt-build", features = [ "link_qt_object_files" ] }